fixed overflow in about.html pages

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
     background-color: #FBF0F6;
 }
 */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 .hero {
     background-size: cover;
